--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <input id="test" type="file" onchange="loadImageFile(this)" /> -->
 
-	<body background="bg.gif">
+	<body background="galaxy.gif">
 
 		<div class="container">
 			<div class="main">
