--- a/index.html
+++ b/index.html
@@ -77,7 +77,24 @@
 
   <input id="test" type="file" onchange="loadImageFile(this)" /> -->
 
-	<body background="galaxy.gif">
+<style>
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+.bg {
+  background-image: url("galaxy.gif");
+
+  height: 100%; 
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+</style>
+</head>
+<body>
 
 		<div class="container">
 			<div class="main">
