--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 					</span>
 					<button class="trigger"><img src="img/Asset 5.svg"/><span>Share This</span></button>
 					<ul class="menu__items">
-						<li><a href=""><i class="fa fa-fw fa-twitter"></i><span></span></a></li>
-						<li><a href=""><i class="fa fa-fw fa-instagram"></i><span></span></a></li>
-						<li><a href=""><i class="fa fa-fw fa-info"></i><span></span></a></li>
+						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
+						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
+						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
