--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					</span>
 					<button class="trigger"><img src="img/Asset 5.svg"/><span>Share This</span></button>
 					<ul class="menu__items">
-						<li><a href="https://twitter.com/3nshoku?t=VD-GnScZd5SkNlmhx5ovLQ&s=09"><i class="fa fa-fw fa-twitter"></i><span></span></a></li>
+						<li><a href="https://twitter.com/hermesicarus"><i class="fa fa-fw fa-twitter"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
