--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
-						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
+						<li><a href="https://www.tiktok.com/@atemhashirama"><i class="fa fa-fw fa-tiktok"></i><span></span></a></li>
 					</ul>
 				</nav>
 				<!-- Related demos -->
