--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
 					</span>
 					<button class="trigger"><img src="img/Asset 5.svg"/><span>Share This</span></button>
 					<ul class="menu__items">
-						<li><a href="https://www.youtube.com/watch?v=WJkQR34XEkc"><i class="fa fa-fw fa-bank"></i><span></span></a></li>
-						<li><a href="https://twitter.com/hermesicarus"><i class="fa fa-fw fa-twitter"></i><span></span></a></li>
+						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
+						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
-						<li><a href="https://www.tiktok.com/@atemhashirama"><i class="fa fa-fw fa-music-note"></i><span></span></a></li>
+						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 					</ul>
 				</nav>
 				<!-- Related demos -->
