--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					</span>
 					<button class="trigger"><img src="img/Asset 5.svg"/><span>Share This</span></button>
 					<ul class="menu__items">
-						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
+						<li><a href="https://youtube.com/playlist?list=PL0LVg41yE2rHXn9IoIqc3f2N36r0hrCMY"><i class="fa fa-fw fa-twitter"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
