--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					</span>
 					<button class="trigger"><img src="img/Asset 5.svg"/><span>Share This</span></button>
 					<ul class="menu__items">
-						<li><a href="https://youtube.com/playlist?list=PL0LVg41yE2rEr5g404y0U8myorBF3GKZY"><i class="fa fa-fw fa-twitter"></i><span></span></a></li>
+						<li><a href="https://iris.to/npub14fj84lfgarc8scwsste7w0ds8ezjn96rq6w24df93pnh2y42fwjslcfjwm"><i class="fa fa-fw fa-hypnotize"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
