--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<button class="trigger"><img src="img/Asset 5.svg"/><span>Share This</span></button>
 					<ul class="menu__items">
 						<li><a href=""><i class="fa fa-fw fa-eject"></i><span></span></a></li>
-						<li><a href="https://iris.to/npub14fj84lfgarc8scwsste7w0ds8ezjn96rq6w24df93pnh2y42fwjslcfjwm"><i class="fa fa-fw fa-braces"></i><span></span></a></li>
+						<li><a href="https://iris.to/npub14fj84lfgarc8scwsste7w0ds8ezjn96rq6w24df93pnh2y42fwjslcfjwm"><i class="fa fa-fw fa-eject"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
