--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					</span>
 					<button class="trigger"><img src="img/Asset 5.svg"/><span>Share This</span></button>
 					<ul class="menu__items">
-						<li><a href="https://magnumsun.github.io/me/"><i class="fa fa-fw fa-eject"></i><span></span></a></li>
+						<li><a href="https://youtu.be/5I5GMIjc6Ck?si=SAF2mqzzfYeIvdTi"><i class="fa fa-fw fa-eject"></i><span></span></a></li>
 						<li><a href="https://iris.to/npub14fj84lfgarc8scwsste7w0ds8ezjn96rq6w24df93pnh2y42fwjslcfjwm"><i class="fa fa-fw fa-circle"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
