--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<ul class="menu__items">
 						<li><a href="https://youtu.be/5I5GMIjc6Ck?si=SAF2mqzzfYeIvdTi"><i class="fa fa-fw fa-eject"></i><span></span></a></li>
 						<li><a href="https://iris.to/npub14fj84lfgarc8scwsste7w0ds8ezjn96rq6w24df93pnh2y42fwjslcfjwm"><i class="fa fa-fw fa-circle"></i><span></span></a></li>
-						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
+						<li><a href=""><i class="bi bi-twitter-x"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
