--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 					<ul class="menu__items">
 						<li><a href="https://youtu.be/5I5GMIjc6Ck?si=SAF2mqzzfYeIvdTi"><i class="fa fa-fw fa-eject"></i><span></span></a></li>
 						<li><a href="https://iris.to/npub14fj84lfgarc8scwsste7w0ds8ezjn96rq6w24df93pnh2y42fwjslcfjwm"><i class="fa fa-fw fa-circle"></i><span></span></a></li>
-						<li><a href=""><i class="<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
+						<li><a href=""><i class=<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
                                                 <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
-                                                </svg>"></i><span></span></a></li>
+                                                </svg>></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
