--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					<ul class="menu__items">
 						<li><a href="https://youtu.be/5I5GMIjc6Ck?si=SAF2mqzzfYeIvdTi"><i class="fa fa-fw fa-eject"></i><span></span></a></li>
 						<li><a href="https://iris.to/npub14fj84lfgarc8scwsste7w0ds8ezjn96rq6w24df93pnh2y42fwjslcfjwm"><i class="fa fa-fw fa-circle"></i><span></span></a></li>
-						<li><a href="https://twitter.com/HermesIcarus"><i class="fa fa-fw fa-"><img src="img/twitter-x.svg"/></i><span></span></a></li>
+						<li><a href="https://x.com/HermesIcarus/status/1759798123419844846?s=20"><i class="fa fa-fw fa-"><img src="img/twitter-x.svg"/></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
