--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
-						<li><a href="https://noones.com/?r=hermesicarus"><i class="fa fa-fw fa-"></i><span></span></a></li>
+						<li><a href="https://noones.com/?r=hermesicarus"><i class="fa fa-fw fa-"><img src="img/cash-coin.svg"/></i><span></span></a></li>
 					</ul>
 				</nav>
 				<!-- Related demos -->
