--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 						<li><a href="https://x.com/HermesIcarus/status/1759798123419844846?s=20"><i class="fa fa-fw fa-"><img src="img/twitter-x.svg"/></i><span></span></a></li>
 						<li><a href="https://x.com/HermesIcarus/status/1759798123419844846?s=20"><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
-						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
-						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
-						<li><a href=""><i class="fa fa-fw fa-energy"></i><span></span></a></li>
+						<li><a href=""><i class="fa fa-fw fa-">0</i><span></span></a></li>
+						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
+						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href="https://noones.com/?r=hermesicarus"><i class="fa fa-fw fa-"><img src="img/cash-coin.svg"/></i><span></span></a></li>
 					</ul>
 				</nav>
