--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					</span>
 					<button class="trigger"><img src="img/Asset 5.svg"/><span>Share This</span></button>
 					<ul class="menu__items">
-						<li><a href="https://iris.to/npub14fj84lfgarc8scwsste7w0ds8ezjn96rq6w24df93pnh2y42fwjslcfjwm"><i class="fa fa-fw fa-"><img src="img/brilliance.svg"/></i><span></span></a></li>
+						<li><a href="https://youtu.be/P0sIBHLNMsU?si=aN1JbLD4Nuj4tbie"><i class="fa fa-fw fa-"><img src="img/brilliance.svg"/></i><span></span></a></li>
 						<li><a href="https://x.com/HermesIcarus/status/1759798123419844846?s=20"><i class="fa fa-fw fa-"><img src="img/twitter-x.svg"/></i><span></span></a></li>
 						<li><a href="https://x.com/HermesIcarus/status/1759798123419844846?s=20"><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
