--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						<li><a href="https://primal.net/p/npub14fj84lfgarc8scwsste7w0ds8ezjn96rq6w24df93pnh2y42fwjslcfjwm"><i class="fa fa-fw fa-"><img src="img/brilliance.svg"/></i><span></span></a></li>
 						<li><a href="https://x.com/HermesIcarus/status/1759798123419844846?s=20"><i class="fa fa-fw fa-"><img src="img/twitter-x.svg"/></i><span></span></a></li>
 						<li><a href="https://x.com/HermesIcarus/status/1759798123419844846?s=20"><i class="fa fa-fw fa-"></i><span></span></a></li>
-						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
+						<li><a href="https://www.tiktok.com/t/ZTNcsmvEw/"><i class="fa fa-fw fa-"><img src="img/tiktok.svg"/></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-">0</i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
