--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<li><a href="https://x.com/HermesIcarus/status/1759798123419844846?s=20"><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href="https://www.tiktok.com/t/ZTNcsmvEw/"><i class="fa fa-fw fa-"><img src="img/tiktok.svg"/></i><span></span></a></li>
 						<li><a href="https://youtu.be/JXRN_LkCa_o?si=zytThdnuzSvTYYHG"><i class="fa fa-fw fa-">1</i><span></span></a></li>
-						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
+						<li><a href="https://youtu.be/KQGQdGcjQ6w?si=FADj3knAQWrq239Yo"><i class="fa fa-fw fa-"><img src="img/northernlight-rose-basic 2.svg"/></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href="https://noones.com/?r=hermesicarus"><i class="fa fa-fw fa-"><img src="img/cash-coin.svg"/></i><span></span></a></li>
 					</ul>
