--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					</span>
 					<button class="trigger"><img src="img/Asset 5.svg"/><span>Share This</span></button>
 					<ul class="menu__items">
-						<li><a href="https://youtu.be/lxb0oheMl-I?si=LqCEHpYg9fjY9TcS"><i class="fa fa-fw fa-"><img src="img/brilliance.svg"/></i><span></span></a></li>
+						<li><a href="https://youtu.be/L_WQZJw5Z7E?si=SUuIcWx83RJrONJc"><i class="fa fa-fw fa-"><img src="img/brilliance.svg"/></i><span></span></a></li>
 						<li><a href="https://x.com/HermesIcarus/status/1828502575160676720"><i class="fa fa-fw fa-"><img src="img/twitter-x.svg"/></i><span></span></a></li>
 						<li><a href="https://x.com/HermesIcarus/status/1759798123419844846?s=20"><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href="https://www.tiktok.com/t/ZTNcsmvEw/"><i class="fa fa-fw fa-"><img src="img/tiktok.svg"/></i><span></span></a></li>
