--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
 					</span>
 					<button class="trigger"><img src="img/Asset 5.svg"/><span>Share This</span></button>
 					<ul class="menu__items">
-						<li><a href="https://youtu.be/L_WQZJw5Z7E?si=SUuIcWx83RJrONJc"><i class="fa fa-fw fa-"><img src="img/brilliance.svg"/></i><span></span></a></li>
+						<li><a href="https://x.com/hermesicarus/status/1895410240776192086?s=46"><i class="fa fa-fw fa-"><img src="img/twitter-x.svg"/></i><span></span></a></li>
 						<li><a href="https://x.com/HermesIcarus/status/1828502575160676720"><i class="fa fa-fw fa-"><img src="img/twitter-x.svg"/></i><span></span></a></li>
-						<li><a href="https://x.com/HermesIcarus/status/1759798123419844846?s=20"><i class="fa fa-fw fa-"></i><span></span></a></li>
-						<li><a href="https://www.tiktok.com/t/ZTNcsmvEw/"><i class="fa fa-fw fa-"><img src="img/tiktok.svg"/></i><span></span></a></li>
-						<li><a href="https://youtu.be/JXRN_LkCa_o?si=zytThdnuzSvTYYHG"><i class="fa fa-fw fa-">1</i><span></span></a></li>
-						<li><a href="https://youtu.be/KQGQdGcjQ6w?si=FADj3knAQWrq239Yo"><i class="fa fa-fw fa-"><img src="img/northernlight-rose-basic 2.svg"/></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
-						<li><a href="https://noones.com/?r=hermesicarus"><i class="fa fa-fw fa-"><img src="img/cash-coin.svg"/></i><span></span></a></li>
+						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
+						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
+						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
+						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
+						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 					</ul>
 				</nav>
 				<!-- Related demos -->
