--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<button class="trigger"><img src="img/Asset 5.svg"/><span>Share This</span></button>
 					<ul class="menu__items">
 						<li><a href="https://x.com/hermesicarus/status/1895410240776192086?s=46"><i class="fa fa-fw fa-"><img src="img/twitter-x.svg"/></i><span></span></a></li>
-						<li><a href="https://x.com/HermesIcarus/status/1828502575160676720"><i class="fa fa-fw fa-"><img src="img/twitter-x.svg"/></i><span></span></a></li>
+						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
