--- a/index.html
+++ b/index.html
@@ -101,10 +101,7 @@
 					<button class="trigger"><img src="img/Asset 5.svg"/><span>Share This</span></button>
 					<ul class="menu__items">
 						<li><a href="https://x.com/hermesicarus/status/1908133780457476220?s=46"><i class="fa fa-fw fa-"><img src="img/twitter-x.svg"/></i><span></span></a></li>
-						<li><a href=""><i class="fa fa-fw fa-"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M18 4H14C10.6863 4 8 6.68629 8 10V14C8 17.3137 10.6863 20 14 20H18C19.1046 20 20 19.1046 20 18V6C20 4.89543 19.1046 4 18 4Z" stroke="#000" stroke-width="2"/>
-                                                <path d="M8 12H16" stroke="#000" stroke-width="2"/>
-                                                </svg></i><span></span></a></li>
+						<li><a href=""><i class="fa fa-fw fa-"><img src="img/grok.svg"/></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href="https://youtu.be/qw2LU1yS7aw?si=n4lVk1eulWrF2h_b"><i class="fa fa-fw fa-">999</i><span></span></a></li>
