--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<button class="trigger"><img src="img/Asset 5.svg"/><span>Share This</span></button>
 					<ul class="menu__items">
 						<li><a href="https://x.com/hermesicarus/status/1908133780457476220?s=46"><i class="fa fa-fw fa-"><img src="img/twitter-x.svg"/></i><span></span></a></li>
-						<li><a href=""><i class="fa fa-fw fa-"><img src="img/grok.svg"/></i><span></span></a></li>
+						<li><a href="https://magnumsun.github.io/InfiniteRewrite/"><i class="fa fa-fw fa-"><img src="img/grok.svg"/></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href="https://youtu.be/qw2LU1yS7aw?si=n4lVk1eulWrF2h_b"><i class="fa fa-fw fa-">999</i><span></span></a></li>
