--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<li><a href="https://magnumsun.github.io/InfiniteRewrite/"><i class="fa fa-fw fa-"><img src="img/grok.svg"/></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
-						<li><a href="https://youtu.be/mgOBRukXuHE?si=WSuBBSbrA2YBQrUW"><i class="fa fa-fw fa-">999</i><span></span></a></li>
+						<li><a href="https://youtu.be/mgOBRukXuHE?si=WSuBBSbrA2YBQrUW"><i class="fa fa-fw fa-">🤐</i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
