--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					</span>
 					<button class="trigger"><img src="img/Asset 5.svg"/><span>Share This</span></button>
 					<ul class="menu__items">
-						<li><a href="https://x.com/atemmagnumsun/status/1917304378391736802?s=46"><i class="fa fa-fw fa-"><img src="img/twitter-x.svg"/></i><span></span></a></li>
+						<li><a href="https://youtu.be/suu5DbNDSQU?si=-yZTQ1us2aFXn2w0"><i class="fa fa-fw fa-"><img src="img/fire.svg"/></i><span></span></a></li>
 						<li><a href="https://magnumsun.github.io/InfiniteRewrite/"><i class="fa fa-fw fa-"><img src="img/grok.svg"/></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
 						<li><a href=""><i class="fa fa-fw fa-"></i><span></span></a></li>
